Solucionar erorres de obtencion